@@ -1,11 +1,10 @@
 # ReportPortal Linux installation
-[![Join Slack chat!](https://reportportal-slack-auto.herokuapp.com/badge.svg)](https://reportportal-slack-auto.herokuapp.com)
+[![Join Slack chat!](https://img.shields.io/badge/slack-join-brightgreen.svg)](https://slack.epmrpp.reportportal.io/)
 [![stackoverflow](https://img.shields.io/badge/reportportal-stackoverflow-orange.svg?style=flat)](http://stackoverflow.com/questions/tagged/reportportal)
 [![GitHub contributors](https://img.shields.io/badge/contributors-102-blue.svg)](https://reportportal.io/community)
 [![Docker Pulls](https://img.shields.io/docker/pulls/reportportal/service-api.svg?maxAge=25920)](https://hub.docker.com/u/reportportal/)
 [![License](https://img.shields.io/badge/license-Apache-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)
 [![Build with Love](https://img.shields.io/badge/build%20with-❤%EF%B8%8F%E2%80%8D-lightgrey.svg)](http://reportportal.io?style=flat)
-
 ## Description
 
 [ReportPortal.io](https://reportportal.io) is a service, that provides increased capabilities to speed up results analysis and reporting through the use of built-in analytic features.
@@ -14,26 +13,26 @@ ReportPortal is a great addition to the Continuous Integration and Continuous Te
 
 ## Supported OS
 
-![Ubuntu](https://img.shields.io/badge/Ubuntu-18.04-orange?style=flat-square)
-![Ubuntu](https://img.shields.io/badge/Ubuntu-20.04-orange?style=flat-square)
+![Ubuntu](https://img.shields.io/badge/Ubuntu-24.04-orange?style=flat-square)
 
-![RHEL](https://img.shields.io/badge/RHEL-6.10-red?style=flat-square)
 ![RHEL](https://img.shields.io/badge/RHEL-7.9-red?style=flat-square)
 ![RHEL](https://img.shields.io/badge/RHEL-8.x-red?style=flat-square)
-![CentOS](https://img.shields.io/badge/CentOS-6.10-yellow?style=flat-square)
-![CentOS](https://img.shields.io/badge/CentOS-7.9-yellow?style=flat-square)
-![CentOS](https://img.shields.io/badge/CentOS-8.x-yellow?style=flat-square)
+![RHEL](https://img.shields.io/badge/RHEL-9.x-red?style=flat-square)
+
+## Automated Install for linux
+In the "scripts" folder, you'll find a collection of scripts designed to set up each service individually. You are welcome to use them as needed. The install_all.sh script can be used to download and install all the services at once. Before running it, ensure you configure the required environment variables. The scripts are designed to automatically compile the software locally during the installation process.
 
 ## Table of contents
-
+* [Report Portal Installation](#ReportPortal)
 * [Description](#Descriprion)
 * [Supported OS](#Supported-OS)
+* [Automated Install for Linux](#Automated-Install-for-linux)
 * [Required Services](#Required-Services)
     * [PostgreSQL](#PostgreSQL)
     * [RabbitMQ](#RabbitMQ)
-    * [ElasticSearch](#ElasticSearch)
+    * [OpenSearch](#OpenSearch)
     * [Traefik](#Traefik)
-* [ReportPortal Services](#ReportPortal-Services)
+    * [ReportPortal Services](#ReportPortal-Services)
     * [Preparation](#Preparation)
     * [Repositories](#Repositories)
     * [Analyzer](#Analyzer)
@@ -43,16 +42,16 @@ ReportPortal is a great addition to the Continuous Integration and Continuous Te
     * [UAT](#UAT)
     * [UI](#UI)
 
-
 ## Required Services
-![PostgreSQL](https://img.shields.io/badge/PostgreSQL-12.6-blue?style=flat-square)
-![RabbitMQ](https://img.shields.io/badge/RabbitMQ-3.8.14-blue?style=flat-square)
-![ElasticSearch](https://img.shields.io/badge/ElasticSearch-7.10.1-blue?style=flat-square)
-![Traefik](https://img.shields.io/badge/Traefik-1.7.29-blue?style=flat-square)
+![PostgreSQL](https://img.shields.io/badge/PostgreSQL-17.2-blue?style=flat-square)
+![RabbitMQ](https://img.shields.io/badge/RabbitMQ-4.0.5-blue?style=flat-square)
+![OpenSearch](https://img.shields.io/badge/OpenSearch-2.18.0-blue?style=flat-square)
+![Traefik](https://img.shields.io/badge/Traefik-2.11.16-blue?style=flat-square)
+![Go](https://img.shields.io/badge/Go-22.6.1-blue?style=flat-square)
 
 ### PostgreSQL
 
-How to install PostgreSQL 12.6 on [Ubuntu](https://www.postgresql.org/download/linux/ubuntu/) LTS 18.04, 20.04 / [Red Hat family](https://www.postgresql.org/download/linux/redhat/) 6, 7, 8 (RHEL, CentOS, etc) 
+How to install PostgreSQL 16 or 17 on [Ubuntu](https://www.postgresql.org/download/linux/ubuntu/) LTS 20.04, 22.04, LTS 24.04 / [Red Hat family](https://www.postgresql.org/download/linux/redhat/) (RHEL, AlmaLinux, etc).
 
 1. After successful installation, you need to prepare the database for ReportPortal services `sudo su - postgres -c "psql"`
 
@@ -72,8 +71,8 @@ local   all             all                                     md5
 host    all             all             127.0.0.1/32            md5
 ```
 File location:
-* Ubuntu: `/etc/postgresql/12/main/pg_hba.conf`
-* RHEL: `/var/lib/pgsql/12/data/pg_hba.conf`
+* Ubuntu: `/etc/postgresql/<PSQL_VERSION>/main/pg_hba.conf`
+* RHEL: `/var/lib/pgsql/<PSQL_VERSION>/data/pg_hba.conf`
 
 3. After the changes above, restart the PostgreSQL service 
 ```bash
@@ -88,12 +87,14 @@ psql -U rpuser -d reportportal -c "CREATE EXTENSION pgcrypto;"
 
 ### RabbitMQ
 
-How to install RabbitMQ 3.8.14 on [Ubuntu](https://www.rabbitmq.com/install-debian.html#apt) LTS 18.04, 20.04 / [Red Hat family](https://www.rabbitmq.com/install-rpm.html) 6, 7, 8 (RHEL, CentOS, etc) 
+How to install RabbitMQ 4.0.5 on [Ubuntu](https://www.rabbitmq.com/docs/install-debian#apt-quick-start-cloudsmith) LTS 20.04, 22.04, 24.04 / [Red Hat family](https://www.rabbitmq.com/docs/install-rpm) (RHEL, AlmaLinux, etc.).
 
 1. After installation, enable RabbitMQ web management console:
 
 ```bash
 sudo rabbitmq-plugins enable rabbitmq_management
+sudo rabbitmq-plugins enable rabbitmq_shovel rabbitmq_shovel_management
+sudo rabbitmq-plugins enable rabbitmq_consistent_hash_exchange
 ```
 
 2. Check and provide ownership of RabbitMQ files to the RabbitMQ user:
@@ -120,20 +121,53 @@ sudo rabbitmqctl add_vhost analyzer
 sudo rabbitmqctl set_permissions -p analyzer <your_rpmquser> ".*" ".*" ".*"
 ```
 
+5. Restart rabbitmq server to deploy changes
+```bash
+sudo systemctl restart rabbitmq-server
+```
 To check RabbitMQ look forward <you_IP>:15672
 
 ![RabbitMQ](img/rabbitmq.gif)
 
-### ElasticSearch
+### Option 1 (Recomended): OpenSearch
 
-How to install ElasticSearch 7.10.1 on [Ubuntu](https://www.elastic.co/guide/en/elasticsearch/reference/7.10/deb.html) LTS 18.04, 20.04 / [Red Hat family](https://www.elastic.co/guide/en/elasticsearch/reference/current/rpm.html) 6, 7, 8 (RHEL, CentOS, etc). Also you need to install `openjdk-11-jre-headless` and `openjdk-8-jdk`
+How to install OpenSearch 2.18.0 on [Ubuntu] (https://opensearch.org/docs/latest/install-and-configure/install-opensearch/debian/) LTS 20.04, 22.04, 24.04 / [Red Hat family](https://opensearch.org/docs/latest/install-and-configure/install-opensearch/rpm/) (RHEL, AlmaLinux, etc).
+Check for Java requirements in your host according to compatibility (https://opensearch.org/docs/latest/install-and-configure/install-opensearch/index/)
+To check OpenSearch use the 
 
-To check ElsaticSearch use the `curl -X GET "localhost:9200/"`. The output will be:
+curl -u '<your_opensearch_user>:<your_opensearch_password>' -XGET http://localhost:9200/_cluster/health?pretty (Use https if you're using SSL on your instance).
+```json
+{
+  "cluster_name" : "opensearch",
+  "status" : "yellow",
+  "timed_out" : false,
+  "number_of_nodes" : 1,
+  "number_of_data_nodes" : 1,
+  "discovered_master" : true,
+  "discovered_cluster_manager" : true,
+  "active_primary_shards" : 6,
+  "active_shards" : 6,
+  "relocating_shards" : 0,
+  "initializing_shards" : 0,
+  "unassigned_shards" : 2,
+  "delayed_unassigned_shards" : 0,
+  "number_of_pending_tasks" : 0,
+  "number_of_in_flight_fetch" : 0,
+  "task_max_waiting_in_queue_millis" : 0,
+  "active_shards_percent_as_number" : 75.0
+}
+```
+
+### Option 2: ElasticSearch
+
+How to install ElasticSearch 8.17 on [Ubuntu](https://www.elastic.co/guide/en/OpenSearch/reference/current/deb.html) LTS 20.04, 22.04, 24.04 / [Red Hat family](https://www.elastic.co/guide/en/OpenSearch/reference/current/rpm.html) (RHEL, AlmaLinux, etc). Also you need to install `openjdk-11-jre-headless` and `openjdk-8-jdk`
+
+To check ElasticSearch use the `curl -X GET "localhost:9200/"`. The output will be:
 
 ```json
 {
     "name" : "reportportal",
-    "cluster_name" : "elasticsearch",
+    "cluster_name" : "ElasticSearch",
     "cluster_uuid" : "98xfWPnKQNSI1ql7q7y57w",
     "version" : {
         "number" : "7.10.1",
@@ -158,47 +192,85 @@ To check ElsaticSearch use the `curl -X GET "localhost:9200/"`. The output will 
 sudo mkdir /opt/traefik && sudo chown $USER:$USER /opt/traefik && cd /opt/traefik
 ```
 
-2. Download Traefik 1.7.29 release from official git [repository](https://github.com/traefik/traefik/releases) and make binary executable
+2. Download Traefik 2.11.16 release from official git [repository](https://github.com/traefik/traefik/releases) and make binary executable
 
 ```bash
-wget -c -N -O traefik https://github.com/traefik/traefik/releases/download/v1.7.29/traefik_linux-amd64 && chmod +x traefik
+wget -c -N -O traefik https://github.com/traefik/traefik/releases/download/v2.11.16/traefik_v2.11.16_linux_amd64.tar.gz && chmod +x traefik
+tar -xvf traefik_v2.11.16_linux_amd64.tar.gz
 ```
 
 3. Download ReportPortal Traefik configuration file
-
 ```bash
-curl -LO https://raw.githubusercontent.com/reportportal/linux-installation/master/data/traefik.toml
+wget -O /etc/traefik/traefik.yml https://raw.githubusercontent.com/reportportal/linux-installation/main/data/traefik.yml
+wget -O /etc/traefik/dynamic_conf.yml https://raw.githubusercontent.com/reportportal/linux-installation/main/data/dynamic_conf.yml
+```
+4.  Create Service for traefik
+```	
+sudo tee /etc/systemd/system/traefik.service <<EOF
+[Unit]
+Description=Traefik
+Documentation=https://doc.traefik.io/traefik/
+After=network.target
+
+[Service]
+ExecStart=/usr/local/bin/traefik --configFile=/etc/traefik/traefik.yml
+Restart=always
+User=root
+
+[Install]
+WantedBy=multi-user.target
+EOF
 ```
 
-4. Start Traefik
+5. Start Traefik
 
 ```bash
-sudo ./traefik --configFile=traefik.toml 2>&1 &
+sudo systemctl daemon-reload
+sudo systemctl enable traefik
+sudo systemctl start traefik
+```
+6. Check Traefik status
+
+```
+sudo systemctl status traefik
 ```
 
+### Install and configure Go
+```bash
+wget https://go.dev/dl/go1.22.6.linux-amd64.tar.gz
+sudo tar -C /usr/local -xzf go1.22.6.linux-amd64.tar.gz
+export PATH=$PATH:/usr/local/go/bin
+```
 ## ReportPortal Services
 
-![Analyzer](https://img.shields.io/badge/Analyzer-5.3.5-9cf?style=flat-square)
-![UI](https://img.shields.io/badge/UI-5.3.5-9cf?style=flat-square)
-![API](https://img.shields.io/badge/API-5.3.5-9cf?style=flat-square)
-![Migration](https://img.shields.io/badge/Migration-5.3.5-9cf?style=flat-square)
-![Index](https://img.shields.io/badge/Index-5.0.10-9cf?style=flat-square)
-![UAT](https://img.shields.io/badge/UAT-5.3.5-9cf?style=flat-square)
+![Analyzer](https://img.shields.io/badge/Analyzer-5.13.1-9cf?style=flat-square)
+![UI](https://img.shields.io/badge/UI-5.12.13-9cf?style=flat-square)
+![API](https://img.shields.io/badge/API-5.13.2-9cf?style=flat-square)
+![Migration](https://img.shields.io/badge/Migration-5.13.0-9cf?style=flat-square)
+![Index](https://img.shields.io/badge/Index-5.13.0-9cf?style=flat-square)
+![UAT](https://img.shields.io/badge/UAT-5.13.0-9cf?style=flat-square)
+![Jobs](https://img.shields.io/badge/UAT-5.13.0-9cf?style=flat-square)
 
 ### Repositories
 
 [![Index](https://img.shields.io/github/downloads/reportportal/service-index/total?label=Index%40downloads&style=flat-square)](https://github.com/reportportal/service-index/releases/) 
 [![UI](https://img.shields.io/github/downloads/reportportal/service-ui/total?label=UI%40downloads&style=flat-square)](https://github.com/reportportal/service-ui/releases/)
-[![API](https://img.shields.io/maven-central/v/com.epam.reportportal/service-api?label=API%40maven-central&style=flat-square)](https://search.maven.org/artifact/com.epam.reportportal/service-api/5.3.5/jar)
+[![API](https://img.shields.io/maven-central/v/com.epam.reportportal/service-api?label=API%40maven-central&style=flat-square)](https://search.maven.org/artifact/com.epam.reportportal/service-api/5.13.0/jar)
 [![UAT](https://img.shields.io/maven-central/v/com.epam.reportportal/service-authorization?label=UAT%40maven-central&style=flat-square)](https://search.maven.org/artifact/com.epam.reportportal/service-authorization/5.3.5/jar)
 
 ### Preparation
 
-How to install Python 3.7, Python 3.7 DEV and Python 3.7 VENV on [Ubuntu](https://www.python.org/downloads/) LTS 18.04, 20.04 / [Red Hat family](https://www.python.org/downloads/) 6, 7, 8 (RHEL, CentOS, etc).
+How to install Python 3.11.11, Python 3.11.11 DEV and Python 3.11.11 VENV on [Ubuntu](https://www.python.org/downloads/) LTS 24.04 / [Red Hat family](https://www.python.org/downloads/) 6, 7, 8 (RHEL, AlmaLinux, etc).
 
-For example for Ubuntu 18.04 OS:
+For example for Ubuntu 24.04 OS:
+Create Env variables
 ```bash
-sudo apt install python3.7 python3.7-dev python3.7-venv -y
+PY_VERSION="3.11.11"
+PY_TARBALL="Python-${PY_VERSION}.tar.xz"
+```
+Get required python version
+```bash
+sudo wget "https://www.python.org/ftp/python/${PY_VERSION}/${PY_TARBALL}"
 ```
 
 Also you need to install `ZIP`, `GCC` and `software-properties-common` (for Ubuntu)
@@ -206,27 +278,85 @@ Also you need to install `ZIP`, `GCC` and `software-properties-common` (for Ubun
 ```bash
 sudo apt install zip software-properties-common gcc -y
 ```
+compile python
+```bash
+tar -xf "${PY_TARBALL}"
+cd "Python-${PY_VERSION}"
+./configure
+make -j"$(nproc)"
+sudo make altinstall
+```
  
 Add environment variables:
 
 ```bash
 MAVEN_REPO="https://repo1.maven.org/maven2/com/epam/reportportal"
 
-API_VERSION="5.3.5"
-UAT_VERSION="5.3.5"
-MIGRATIONS_VERSION="5.3.5"
-UI_VERSION="5.3.5"
-SERVICE_INDEX_VERSION="5.0.10"
-SERVICE_ANALYZER="5.3.5"
+API_VERSION="5.13.2"
+UAT_VERSION="5.13.0"
+MIGRATIONS_VERSION="5.13.0"
+UI_VERSION="5.12.13"
+SERVICE_INDEX_VERSION="5.13.0"
+SERVICE_ANALYZER="5.13.1"
+SERVICE_JOBS="5.13.0"
+SERVICE_INDEX="5.13.0"
 
-SERVICE_API_JAVA_OPTS="-Xms1024m -Xmx2048m"
-SERVICE_UAT_JAVA_OPTS="-Xms512m -Xmx512m"
+SERVICE_API_JAVA_OPTS="-Xmx1g -XX:+UseG1GC -XX:InitiatingHeapOccupancyPercent=70 -Djava.security.egd=file:/dev/./urandom"
+SERVICE_UAT_JAVA_OPTS="-Djava.security.egd=file:/dev/./urandom -XX:MinRAMPercentage=60.0 -XX:MaxRAMPercentage=90.0 --add-opens=java.base/java.lang=ALL-UNNAMED"
+SERVICE_JOBS_JAVA_OPTS="-Djava.security.egd=file:/dev/./urandom -XX:+UseG1GC -XX:+UseStringDeduplication -XX:G1ReservePercent=20 -XX:InitiatingHeapOccupancyPercent=60 -XX:MaxRAMPercentage=70.0 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp"
 
-RP_POSTGRES_USER=<your_rpdbuser>
-RP_POSTGRES_PASSWORD=<your_rpdbuser_password>
-RP_RABBITMQ_USER=<your_rpmquser>
-RP_RABBITMQ_PASSWORD=<your_rpmquser_password>
+POSTGRES_DB="reportportal"
+RP_ENCRYPTION_KEY=<YourStrongEncryptionKey>
+RP_JOBS_BASEURL="http://localhost:8686"    
 
+RP_AMQP_HOST=<your_rabbitmq_host>
+RP_AMQP_PORT=<your_rabbitmq_port>
+RP_AMQP_APIPORT=<your_rabbitmq_api_port>
+RP_AMQP_USER=<your_rabbitmq_user>
+RP_AMQP_PASS=<your_rabbitmq_password>
+RP_AMQP_APIUSER=<your_rabbitmq_api_user>
+RP_AMQP_APIPASS=<your_rabbitmq_api_password>
+RP_AMQP_ANALYZER_VHOST=<your_analyzer_virtual_host>
+RABBITMQ_HOST=<your_rabbitmq_host>
+RABBITMQ_PORT=<your_rabbitmq_port>
+RABBITMQ_API_PORT=<your_rabbitmq_api_port>
+RABBITMQ_DEFAULT_USER=<your_rabbitmq_default_user>
+RABBITMQ_DEFAULT_PASS=<your_rabbitmq_default_password>
+AMQP_EXCHANGE_NAME=<your_amqp_exchange_name>
+AMQP_VIRTUAL_HOST=<your_amqp_virtual_host>
+AMQP_URL="amqp://${RABBITMQ_DEFAULT_USER}:${RABBITMQ_DEFAULT_PASS}@${RP_AMQP_HOST}:${RP_AMQP_PORT}${RP_AMQP_ANALYZER_VHOST}"
+
+DATASTORE_TYPE="filesystem" 
+
+ANALYZER_BINARYSTORE_TYPE=<your_analyzer_binarystore_type>
+INSTANCE_TASK_TYPE=<your_instance_task_type>
+UWSGI_WORKERS=<your_uwsgi_workers_count>
+
+COM_TA_REPORTPORTAL_JOB_INTERRUPT_BROKEN_LAUNCHES_CRON="PT1H"
+COM_TA_REPORTPORTAL_JOB_LOAD_PLUGINS_CRON="PT10S"
+COM_TA_REPORTPORTAL_JOB_CLEAN_OUTDATED_PLUGINS_CRON="PT10S"
+RP_ENVIRONMENT_VARIABLE_CLEAN_ATTACHMENT_CRON="0 0 */24 * * *"
+RP_ENVIRONMENT_VARIABLE_CLEAN_LOG_CRON="0 0 */24 * * *"
+RP_ENVIRONMENT_VARIABLE_CLEAN_LAUNCH_CRON="0 0 */24 * * *"
+RP_ENVIRONMENT_VARIABLE_CLEAN_STORAGE_CRON="0 0 */24 * * *"
+RP_ENVIRONMENT_VARIABLE_STORAGE_PROJECT_CRON="0 */5 * * * *"
+RP_ENVIRONMENT_VARIABLE_CLEAN_EXPIREDUSER_CRON="0 0 */24 * * *"
+RP_ENVIRONMENT_VARIABLE_NOTIFICATION_EXPIREDUSER_CRON="0 0 */24 * * *"
+RP_ENVIRONMENT_VARIABLE_CLEAN_EVENTS_CRON="0 30 05 * * *"
+RP_ENVIRONMENT_VARIABLE_CLEAN_EVENTS_RETENTIONPERIOD="365"
+RP_ENVIRONMENT_VARIABLE_CLEAN_STORAGE_CHUNKSIZE="20000"
+RP_ENVIRONMENT_VARIABLE_PATTERN_ANALYSIS_BATCH_SIZE="100"
+RP_ENVIRONMENT_VARIABLE_PATTERN_ANALYSIS_PREFETCH_COUNT="1"
+RP_ENVIRONMENT_VARIABLE_PATTERN_ANALYSIS_CONSUMERS_COUNT="1"
+
+RP_SERVER_PORT=<your_server_port>
+RP_JOBS_BASEURL=<your_jobs_base_url>
+RP_SESSION_LIVE=<your_session_live_duration>
+RP_SAML_SESSION_LIVE=<your_saml_session_live_duration>
+DATASTORE_PATH=<your_datastore_path>
+NODE_VERSION="20"
+PY_VERSION="23.11.11"
+LOGGING_LEVEL=<your_logging_level>
 ```
 
 Create a working directory 
@@ -250,16 +380,17 @@ cd /opt/reportportal/service-auto-analyzer-${SERVICE_ANALYZER}
 2. Work with a virtual environment:
 ```bash
 # Create a virtual environment with any name (for example /vrpanalyzer)
-sudo python3.7 -m venv /vrpanalyzer
+sudo python3.11 -m venv /analyzer
 
 # Install python required libraries
-sudo /vrpanalyzer/bin/pip install --no-cache-dir -r requirements.txt
+sudo /analyzer/bin/pip install --upgrade pip
+sudo /analyzer/bin/pip install --no-cache-dir -r requirements.txt
 
 # Activate the virtual environment
 source /vrpanalyzer/bin/activate
 
 # Install stopwords package from the nltk library
-sudo /vrpanalyzer/bin/python3 -m nltk.downloader -d /usr/share/nltk_data stopwords
+sudo /analyzer/bin/python3.11 -m nltk.downloader -d /usr/share/nltk_data stopwords
 ```
 
 3. Start the uwsgi server, you can change properties, such as the worker's quantity for running the analyzer in several processes. 
@@ -267,7 +398,7 @@ sudo /vrpanalyzer/bin/python3 -m nltk.downloader -d /usr/share/nltk_data stopwor
 Set in ***app.ini*** your virtual environment specified above:
 
 ```bash
-virtualenv = vrpanalyzer
+virtualenv = analyzer
 ```
 
 Set in ***app.py*** RabbitMQ URL `amqp://user:password@localhost:5672`, binary store type `filesystem`, and directory name (for example `rpstorage`)
@@ -282,52 +413,89 @@ Set in ***app.py*** RabbitMQ URL `amqp://user:password@localhost:5672`, binary s
 Activate the virtual environment
 
 ```bash
-source /vrpanalyzer/bin/activate
+source /analyzer/bin/activate
 ```
 
 Install stopwords package from the nltk library
 
 ```bash
-sudo /vrpanalyzer/bin/python3.7 -m nltk.downloader -d /usr/share/nltk_data stopwords
+sudo /analyzer/bin/python3.11 -m nltk.downloader -d /usr/share/nltk_data stopwords
 ```
 
 Start Analyzer
 
 ```bash
-/vrpanalyzer/bin/uwsgi --ini app.ini > /dev/null 2>&1 &
+/analyzer/bin/uwsgi --ini app.ini > /dev/null 2>&1 &
+```
+for analyzer train consider the same steps, but using "analyzer-train" instead "analyzer", also you will require the following environment variables:
+```bash
+INSTANCE_TASK_TYPE: train
+UWSGI_WORKERS: 1
+```
+### Migration
+1. Prepare automatic database Authentication
+```bash
+PGPASS_FILE="$HOME/.pgpass"
+echo "Configuring automatic authentication in $PGPASS_FILE..."
+cat <<EOF > "$PGPASS_FILE"
+${POSTGRES_HOST}:${POSTGRES_PORT}:${RP_POSTGRES_DB}:${RP_POSTGRES_USER}:${POSTGRES_PASSWORD}
+EOF
+chmod 600 "$PGPASS_FILE"
 ```
 
-### Migration
-
-1. Download service
+2. Download service
 
 ```bash
 cd /opt/reportportal/ && \
 wget -c -N -O migrations.zip https://github.com/reportportal/migrations/archive/${MIGRATIONS_VERSION}.zip && unzip migrations.zip && mv migrations-${MIGRATIONS_VERSION} migrations && rm -f migrations.zip
 ```
 
-2. Run service
+3. Run service
 
-You need to execute all `up` scripts to prepare your database for ReportPortal services:
+You need to execute all `up` scripts to prepare your database for ReportPortal services, run the following script in orther to install it:
 
 ```bash
-PGPASSWORD=$RP_POSTGRES_PASSWORD psql -U $RP_POSTGRES_USER -d reportportal -a -f migrations/migrations/0_extensions.up.sql -f migrations/migrations/1_initialize_schema.up.sql -f migrations/migrations/2_initialize_quartz_schema.up.sql -f migrations/migrations/3_default_data.up.sql -f migrations/migrations/4_size_limitations.up.sql -f migrations/migrations/5_test_case_id_type.up.sql -f migrations/migrations/6_retries_handling.up.sql -f migrations/migrations/7_auth_integration.up.sql -f migrations/migrations/8_sender_case_enabled_field.up.sql -f migrations/migrations/9_analyzer_params.up.sql -f migrations/migrations/10_attachment_size.up.sql -f migrations/migrations/11_password_encoding.up.sql -f migrations/migrations/12_remove_ticket_duplicates.up.sql -f migrations/migrations/13_add_allocated_storage_per_project.up.sql -f migrations/migrations/14_test_case_id_size_increase.up.sql -f migrations/migrations/15_statistics_decreasing.up.sql -f migrations/migrations/16_remove_unused_indexes.up.sql -f migrations/migrations/17_status_enum_extension.up.sql -f migrations/migrations/18_job_attributes.up.sql -f migrations/migrations/19_retries_handling_extension.up.sql -f migrations/migrations/20_deep_merge_statistics_handling.up.sql -f migrations/migrations/21_deep_merge_retries_fix.up.sql -f migrations/migrations/22_deep_merge_nested_steps_fix.up.sql -f migrations/migrations/23_rerun_item_statistics_fix.up.sql -f migrations/migrations/24_widget_views_cleanup.up.sql -f migrations/migrations/25_deep_merge_nested_steps_path_fix.up.sql 2>&1 &
+for FILE in $(ls migrations/migrations/*.up.sql | sort -V); do
+  echo "Applying migration: $FILE"
+  psql -h "$POSTGRES_HOST" \
+       -p "$POSTGRES_PORT" \
+       -U "$RP_POSTGRES_USER" \
+       -d "$RP_POSTGRES_DB" \
+       -a -f "$FILE"
+done
+```
+
+4. Clean workspace
+
+```bash
+rm -f "$PGPASS_FILE"
+rm -rf ./migrations/
 ```
 
 ### Index
 
-1. Download service
+1.  Clone the Repository
 
 ```bash
 cd /opt/reportportal/ && \
-wget -c -N -O service-index https://github.com/reportportal/service-index/releases/download/$SERVICE_INDEX_VERSION/service-index_linux_amd64
+sudo git clone --depth 1 --branch 5.13.0 https://github.com/reportportal/service-index.git /opt/reportportal/service-index-build
+```
+2. Build the service
+```bash
+cd service-index-build/
+sudo CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o app
+```
+3. Install the Binary
+```bash
+sudo mkdir -p /opt/reportportal/service-index
+sudo cp app /opt/reportportal/service-index/
+sudo chmod +x /opt/reportportal/service-index/app
 ```
 
-2. Run service
-
+4. Remove build folder and Run service
 ```bash
-sudo chmod +x service-index && \
-sudo RP_SERVER_PORT=9000 LB_URL=http://localhost:8081 ./service-index 2>&1 &
+sudo rm -rf /opt/reportportal/service-index-build/
+sudo nohup  RP_SERVER_PORT=9000 LB_URL=http://localhost:8081 /opt/reportportal/service-index/app 2>&1 &
 ```
 
 ### API
@@ -342,7 +510,7 @@ curl -L $MAVEN_REPO/service-api/$API_VERSION/service-api-$API_VERSION-exec.jar -
 2. Run API service
 
 ```bash
-sudo RP_AMQP_HOST=localhost RP_AMQP_APIUSER=$RP_RABBITMQ_USER RP_AMQP_APIPASS=$RP_RABBITMQ_PASSWORD RP_AMQP_USER=$RP_RABBITMQ_USER RP_AMQP_PASS=$RP_RABBITMQ_PASSWORD RP_DB_USER=$RP_POSTGRES_USER RP_DB_PASS=$RP_POSTGRES_PASSWORD RP_DB_HOST=localhost java $SERVICE_API_JAVA_OPTS -jar service-api.jar 2>&1 &
+sudo RP_AMQP_HOST=$RP_AMQP_HOST RP_AMQP_APIUSER=$RP_RABBITMQ_USER RP_AMQP_APIPASS=$RP_RABBITMQ_PASSWORD RP_AMQP_USER=$RP_RABBITMQ_USER RP_AMQP_PASS=$RP_RABBITMQ_PASSWORD RP_DB_USER=$RP_POSTGRES_USER RP_DB_PASS=$RP_POSTGRES_PASSWORD RP_DB_HOST=$RP_DB_HOST java $SERVICE_API_JAVA_OPTS -jar service-api.jar 2>&1 &
 ```
 
 ### UAT
@@ -357,34 +525,59 @@ curl -L $MAVEN_REPO/service-authorization/$UAT_VERSION/service-authorization-$UA
 2. Run service
 
 ```bash
-RP_DB_HOST=localhost RP_DB_USER=$RP_POSTGRES_USER RP_DB_PASS=$RP_POSTGRES_PASSWORD java $SERVICE_UAT_JAVA_OPTS -jar service-uat.jar 2>&1 &
+RP_DB_HOST=$RP_DB_HOST RP_DB_USER=$RP_POSTGRES_USER RP_DB_PASS=$RP_POSTGRES_PASSWORD java $SERVICE_UAT_JAVA_OPTS -jar service-uat.jar 2>&1 &
+```
+### JOBS
+
+1. Download service
+
+```bash
+cd /opt/reportportal/ && \
+curl -L $MAVEN_REPO/service-jobs/$SERVICE_JOBS/service-jobs-$SERVICE_JOBS-exec.jar -o service-uat.jar
+```
+
+2. Run service
+
+```bash
+RP_DB_HOST=$RP_DB_HOST RP_DB_USER=$RP_POSTGRES_USER RP_DB_PASS=$RP_POSTGRES_PASSWORD java $SERVICE_JOBS_JAVA_OPTS -jar service-uat.jar 2>&1 &
 ```
 
 ### UI
 
-1. Create UI work directory
+1. Install dependencies
 
 ```bash
-mkdir -p /opt/reportportal/ui && cd /opt/reportportal/
+sudo apt-get update
+sudo apt-get install -y git curl
+curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
+sudo apt-get install -y nodejs npm
 ```
 
-2. Download UI service 
+2. Clone repository 
 
 ```bash
-curl -L https://github.com/reportportal/service-ui/releases/download/$UI_VERSION/service-ui_linux_amd64 -o service-ui && \
-mv service-ui ui/ && \
-chmod -R +x ui/* && \
-curl -LO https://github.com/reportportal/service-ui/releases/download/5.3.5/ui.tar.gz && \
-mkdir public && \
-tar -zxvf ui.tar.gz -C public && rm -f ui.tar.gz
+git clone https://github.com/reportportal/service-ui.git service-ui
+cd service-ui
+git checkout $UI_VERSION
 ```
 
-3. Run service
+3. Install Project Dependencies
 
 ```bash
-cd ui/ && RP_STATICS_PATH=../public RP_SERVER_PORT=3000 ./service-ui 2>&1 &
+cd app
+npm cache clean --force
+npm install --legacy-peer-deps --prefer-offline --no-audit --no-fund
 ```
 
+4. Set Up Env Variables
+```bash
+echo "PROXY_PATH='http://localhost:8080/'" > .env
+```
+
+5. Run Project
+```bash
+nohup npm run dev > ui.log 2>&1 &
+```
 Check availability of ReportPortal
 
 ![RabbitMQ](img/reportportal.gif)
